initial ideas for parsing args

--- a/todo.txt
+++ b/todo.txt
@@ -41,17 +41,19 @@ export default (request, configuration) => {
 
 -m HTTP method
 
--v Verbose mode - more details in output (full request with headers) + response headers
+-v Verbose mode - more details in output (response headers)
 
--d Debug mode - provide all logs from jsonr (use it only if you have issues with application, you can send such logs to help troubleshooting)
+--debug Debug mode - provide all logs from jsonr (use it only if you have issues with application, you can send such logs to help troubleshooting)
 
--b request body (if not  willing to use http file)
+-b request body (if not willing to use http file)
 
---no-auto-json-header by default jsonr will append Content-Type "application/json" header to all requests
+--no-default-content-type-header by default jsonr will append Content-Type "application/json" header to all requests
  (if such header won't be present in definition) so you don't need to repeat it. Use this option to disable
 this behaviour
 
 --help display this help message
+
+--version display version info
 
 -o [o]utput file for response details (status code, total execution time, body, headers), if omitted outputs to stdout. 
 Caution: If file exists it will overwrite it. If no extension provided, it will automatically append .json
